--- a/OnlineSensorTracker.Infrastructure.DataAccess/OnlineSensorTracker.Infrastructure.DataAccess.csproj
+++ b/OnlineSensorTracker.Infrastructure.DataAccess/OnlineSensorTracker.Infrastructure.DataAccess.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="MySql.Data" Version="8.0.20" />
     <PackageReference Include="System.Management" Version="4.7.0" />
